After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795321 - rtsp-client: Fix session timeout
rtsp-client: Fix session timeout
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.14.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 795354 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2018-04-17 09:21 UTC by Joakim Johansson
Modified: 2018-04-20 07:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch with a fix for session timeout (1.42 KB, patch)
2018-04-17 09:23 UTC, Joakim Johansson
none Details | Review
Patch with a fix for session timeout (1.81 KB, patch)
2018-04-17 10:06 UTC, Joakim Johansson
committed Details | Review

Description Joakim Johansson 2018-04-17 09:21:01 UTC
When streaming data over TCP then is not the keep-alive
functionality working.
    
The reason is that the function do_send_data have changed
to boolean but the code is still checking the received result
from send_func with GST_RTSP_OK.
    
The result is that a successful send_func will always lead to
that do_send_data is returning false and the keep-alive will
not be updated.
Comment 1 Joakim Johansson 2018-04-17 09:23:58 UTC
Created attachment 371019 [details] [review]
Patch with a fix for session timeout
Comment 2 Joakim Johansson 2018-04-17 10:06:23 UTC
Created attachment 371027 [details] [review]
Patch with a fix for session timeout
Comment 3 Sebastian Dröge (slomo) 2018-04-20 07:19:48 UTC
commit 808b49cbfc9cd7f5df5b36a6a66f918cfb8c65b6 (HEAD, master)
Author: Joakim Johansson <joakimj@axis.com>
Date:   Tue Apr 17 11:03:11 2018 +0200

    rtsp-client: Fix session timeout
    
    When streaming data over TCP then is not the keep-alive
    functionality working.
    
    The reason is that the function do_send_data have changed
    to boolean but the code is still checking the received result
    from send_func with GST_RTSP_OK.
    
    The result is that a successful send_func will always lead to
    that do_send_data is returning false and the keep-alive will
    not be updated.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=795321
Comment 4 Sebastian Dröge (slomo) 2018-04-20 07:19:56 UTC
*** Bug 795354 has been marked as a duplicate of this bug. ***