gst/rtsp-server/rtsp-client.c
@@ -1056,7 +1056,7 @@ do_send_data (GstBuffer * buffer, guint8 channel, GstRTSPClient * client)
 {
   GstRTSPClientPrivate *priv = client->priv;
   GstRTSPMessage message = { 0 };
-  GstRTSPResult res = GST_RTSP_OK;
+  gboolean ret = TRUE;
   GstMapInfo map_info;
   guint8 *data;
   guint usize;
@@ -1071,7 +1071,7 @@ do_send_data (GstBuffer * buffer, guint8 channel, GstRTSPClient * client)
 
   g_mutex_lock (&priv->send_lock);
   if (priv->send_func)
-    res = priv->send_func (client, &message, FALSE, priv->send_data);
+    ret = priv->send_func (client, &message, FALSE, priv->send_data);
   g_mutex_unlock (&priv->send_lock);
 
   gst_rtsp_message_steal_body (&message, &data, &usize);
@@ -1079,7 +1079,7 @@ do_send_data (GstBuffer * buffer, guint8 channel, GstRTSPClient * client)
 
   gst_rtsp_message_unset (&message);
 
-  return res == GST_RTSP_OK;
+  return ret;
 }
 
 /**
